<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="guardar">Acceder</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">E-Mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="edad">Edad</string>
    <string name="registrar">Registrar</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="duracion">Duración</string>
    <string name="puntuacion">Puntuación</string>
    <string name="year">Año de estreno</string>
    <string name="director">Director</string>
    <string name="volver">Volver</string>
    <string name="crearpelicula">Crear Película</string>
    <string name="favoritos">Favoritos</string>
    <string name="agregarfav">Agregar a Favoritos</string>
    <string name="eliminarfav">Eliminar de Favoritos</string>
    <string name="mostrarpeliculas">Mostrar Películas</string>
</resources>
