<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.RegisterActivity"
        android:background="@color/colorBackGround">

    <Button
            android:text="Imagen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edad"
            android:id="@+id/imagen"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="uploadPhoto" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="200dp"
            android:ems="10"
            android:id="@+id/nombre"
            android:gravity="center"
            android:hint="@string/nombre"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/correo"
            android:gravity="center"
            android:hint="@string/correo"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/correo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/contraseña"
            android:gravity="center"
            android:hint="@string/contraseña"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edad"
            android:gravity="center"
            android:hint="@string/edad"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contraseña" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/registrar"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="createProfile" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imagen"/>

    <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/volver"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10" app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/registrar"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@mipmap/ic_launcher"
            android:id="@+id/imageView" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/nombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>