<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.MovieRegisterActivity"
        android:background="@color/colorText">

    <Button
            android:text="Imagen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/imagen"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="uploadPhoto" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ratingBar"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="564dp"
            android:ems="10"
            android:id="@+id/nombre"
            android:gravity="center"
            android:hint="@string/nombre"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:id="@+id/sinopsis"
            android:gravity="center"
            android:hint="@string/sinopsis"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/duracion"
            android:gravity="center"
            android:hint="@string/duracion"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/year"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/year"
            android:gravity="center"
            android:hint="@string/year"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/director"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/director"
            android:gravity="center"
            android:hint="@string/director"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/sinopsis"/>

    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/registrar"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="createProfile" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imagen"/>

    <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/volver"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/registrar"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="35dp" app:layout_constraintTop_toTopOf="parent"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" android:visibility="visible"
            android:progressTint="@color/colorAccent"
            android:secondaryProgressTint="@color/colorAccent"
            android:stepSize="1"
            android:numStars="5" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/puntuacion"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/puntuacion"
            android:gravity="center"
            android:hint="@string/puntuacion"
            android:textColor="@color/colorTextHint"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/duracion"/>

</android.support.constraint.ConstraintLayout>